# kostrzenski_stojke

./: README.md
lab_1/: CMakeLists.txt  package.xml
lab_1/launch/: turtlekeyboard.launch
lab_1/scripts/: turtle_keyboard_controller.py
lab_2/: CMakeLists.txt  package.xml
lab_2/launch/: dynamic.launch  visual.launch
lab_2/rviz/: urdf.rviz
lab_2/src/: dh_converter.py  visual.urdf
lab_2/urdf/: dynamic.urdf.xacro  dynamic2.urdf.xacro  static.urdf.xacro
lab_2/yaml/: joints.yaml  params.yaml  params2.yaml  urdf.yaml
lab_3/: CMakeLists.txt  package.xml
lab_3/launch/: KDL.launch  dynamic_lab3.launch  joints.launch  nonKDL.launch
lab_3/rviz/: urdf.rviz
lab_3/src/: KDL.py  dh_converter.py  non_kdl_dkin.py
lab_3/urdf/: dynamic2.urdf.xacro
lab_3/yaml/: dh_params.json  params.yaml  restrictions.json
lab_4/: CMakeLists.txt  package.xml
lab_4/launch/: jint.launch  runboth.launch  static.launch
lab_4/rviz/: urdf.rviz
lab_4/src/: Jint.srv  interpolJint.py  jint.py  jintApp.py  oint.py  paths.py
lab_4/srv/: oint.srv
lab_4/urdf/: static.urdf.xacro
lab_4/yaml/: restrictions.json
lab_5/: CMakeLists.txt  package.xml
lab_5/launch/: circle.launch  dynamic.launch  rectangle.launch
lab_5/src/: inv_kin.py  ocmd.py  ocmd_rect.py  oint.py
lab_5/srv/: Jint.srv
lab_5/urdf/: dynamic.urdf.xacro
lab_5/yaml/: restrictions.json  urdf.yaml
