<?xml version="1.0"?>
<package format="2">
  <name>lab_1</name>
  <version>0.0.1</version>
  <description>ANRO lab #1 package</description>

  <maintainer email="piotr.kostrzenski@gmail.com">Piotr Kostrzenski</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/pe-eiti-anro-20l/kostrzenski-stojke/tree/master/lab_1</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
